# NeCTv2

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
demo/: 00_static_reconstruct_from_file.py  01_static_reconstruct_from_array.py  02_geometry_load.py  03_dynamic_reconstruction_video.py  04_dynamic_reconstruction_export_volume.py  05_parallel_beam.py  06_export_video_projections.py  07_reconstruct_from_cfg_file.py  08_continious_scan.py  08_static_trainer.py  09_combinedcubes.py  09_continious_scan.py  10_mixedcubes.py  11_quadcubes_large_spatial.py  11_splitquadcubes.py  45_combinedcubes.py  54_mixedcubes.py  60_hourglass_sand_volume.py  63_splitquadcubes.py  69_static_multi_acq_compare.py
docs/: index.md  nectv2_thesis.aux  nectv2_thesis.bbl  nectv2_thesis.blg  nectv2_thesis.fdb_latexmk  nectv2_thesis.fls  nectv2_thesis.lof  nectv2_thesis.lot  nectv2_thesis.out  nectv2_thesis.tex  nectv2_thesis.toc  references.bib
docs/scripts/: fig_golden_section.py  fig_subangle_differentiation.py  fig_three_phenomena.py  thesis_overview.py
docs/userguide/: config.md  geometry.md
nect/: __init__.py  comp_slice.py  compare_two.py  config.py  data.py  download_demo_data.py  dynamic_export.py  epoch_normalization.py  fdk.py  function_plotter.py  list_files_by_size.py  loss_plotter.py  reconstruct.py  scivis_data.py  static_export.py  utils.py
nect/cfg/: default.yaml
nect/network/: __init__.py  kplanes.py  networks.py
nect/sampling/: __init__.py  ct_sampling.cu  geometry.py  projector.py
nect/trainers/: __init__.py  (+8 more)
torch_extra/: typing.py
(+53 files in other folders)
