[build-system]
requires = ["setuptools>=80.0.0", "wheel", "pybind11>=2.12", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "nect"
version = "0.0.1"
description = "4D-CT reconstruction using Machine Learning and AI"
authors = [
    {name = "Kristian", email = "kristian.carlenius@hotmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "opencv-python",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "scipy>=1.10",
    "jinja2>=3.1",
    "tqdm>=4.66",
    "loguru>=0.7",
    "pynvml>=11.5",
    "python-dotenv>=1.0",
    "dacite>=1.8.1",
    "torchinfo>=1.8.0",
    "tensorboard>=2.16.2",
    "tifffile==2024.5.22",
    "lightning~=2.5",
    "zarr",
]

[project.optional-dependencies]
torch = [
    "torch>=2.2,<2.8",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
